# FastApi-Python

./: .gitignore  pyproject.toml
crud_fastapi/: app.py  main.py
crud_fastapi/src/controllers/: user_controller.py
crud_fastapi/src/database/: connection.py
crud_fastapi/src/models/: user_model.py
crud_fastapi/src/repositories/: user_repository.py
crud_fastapi/src/routes/: user_routes.py
crud_fastapi/src/schemas/: user_schemas.py
crud_fastapi/src/services/: user_service.py
tests/: conftest.py  test_app.py  test_create_user.py  test_get_user_by_id.py
tests/fixtures/: data.py
