[tool.poetry]
name = "crud-fastapi"
version = "0.1.0"
description = ""
authors = ["Adrian Roger <adrianroge@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = {extras = ["standard"], version = "^0.115.6"}
sqlalchemy = "^2.0.36"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.2"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 99 # Numero de caracteres por linha
extend-exclude = ['migrations'] # não formata os codigos dentro de migrations

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
run = 'fastapi dev crud_fastapi/main.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=crud_fastapi -vv'
post_test = 'coverage html'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
